# Introduction_Software_Analysis_and_Modeling

./: README.md
Etude_cas/ascq_me/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Doxyfile  Makefile  albu_ascq_me_peptides_scoring.txt  albu_ascq_me_results.txt  ascq_me  ascq_me.doxytag  cmake_install.cmake  default_ascq_me_results.txt  default_configuration_data.txt  gmon.out  one_miss_cleavage_apo_mascot_data.txt  rapportone.dot  rapportwo.dot
Etude_cas/ascq_me/Testing/Temporary/: CTestCostData.txt
Etude_cas/ascq_me/_configuration/: CMakeLists.txt
Etude_cas/ascq_me/docs/html/: aa_8cpp.html  aa_8cpp.js  aa_8cpp__incl.map  aa_8cpp__incl.md5  aa_8cpp_a072401b5a9c4013a4ae263c95cf11001_cgraph.map  aa_8cpp_a072401b5a9c4013a4ae263c95cf11001_cgraph.md5  aa_8cpp_a7051accbc420772e52a6f065906ef3b0_cgraph.map  aa_8cpp_a7051accbc420772e52a6f065906ef3b0_cgraph.md5  aa_8cpp_ab8fb4020e5ce73359f5cdebdab5e7eaf_cgraph.md5  aa_8cpp_source.html  aa_8h.html  aa_8h.js  aa_8h__dep__incl.map  aa_8h__dep__incl.md5  aa_8h__incl.map  aa_8h__incl.md5  aa_8h_a02f042cf8135e2f2ef82c939a6007565_cgraph.map  aa_8h_a02f042cf8135e2f2ef82c939a6007565_cgraph.md5  aa_8h_a79bc6083d58f52b3d4a9e30e3dfd241d_cgraph.map  aa_8h_a79bc6083d58f52b3d4a9e30e3dfd241d_cgraph.md5  aa_8h_ab411645090eb466fc78a2ada0fd252a0_cgraph.map  aa_8h_ab411645090eb466fc78a2ada0fd252a0_cgraph.md5  aa_8h_ab8fb4020e5ce73359f5cdebdab5e7eaf_cgraph.map  aa_8h_afd3b9a961e51a417a1335371880ba2c7_cgraph.map  aa_8h_afd3b9a961e51a417a1335371880ba2c7_cgraph.md5  aa_8h_source.html  annotated.html  annotated_dup.js  ascq__me_8cpp.html  ascq__me_8cpp.js  ascq__me_8cpp__incl.map  ascq__me_8cpp__incl.md5  ascq__me_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  ascq__me_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  ascq__me_8cpp_source.html  ascq__me__configuration_8cpp.html  ascq__me__configuration_8cpp.js  ascq__me__configuration_8cpp__incl.map  ascq__me__configuration_8cpp__incl.md5  ascq__me__configuration_8cpp_a2270f9601d02271f50d855f6d657bbb1_cgraph.map  (+567 more)
Etude_cas/ascq_me/docs/latex/: aa_8cpp.tex  aa_8cpp__incl.eps  aa_8cpp__incl.md5  aa_8cpp_a072401b5a9c4013a4ae263c95cf11001_cgraph.eps  aa_8cpp_a38379654239d03c833a96f4753fc8903_cgraph.eps  aa_8cpp_a79bc6083d58f52b3d4a9e30e3dfd241d_cgraph.eps  aa_8cpp_ab411645090eb466fc78a2ada0fd252a0_cgraph.eps  aa_8cpp_ab411645090eb466fc78a2ada0fd252a0_cgraph.md5  aa_8cpp_ab8fb4020e5ce73359f5cdebdab5e7eaf_cgraph.eps  aa_8cpp_afd3b9a961e51a417a1335371880ba2c7_cgraph.md5  aa_8h.tex  aa_8h__dep__incl.eps  aa_8h__dep__incl.md5  aa_8h__incl.eps  aa_8h__incl.md5  aa_8h_a02f042cf8135e2f2ef82c939a6007565_cgraph.md5  aa_8h_a072401b5a9c4013a4ae263c95cf11001_cgraph.md5  aa_8h_a79bc6083d58f52b3d4a9e30e3dfd241d_cgraph.md5  aa_8h_a9b0323cac421a29475fdb29796a36e85_cgraph.eps  aa_8h_a9b0323cac421a29475fdb29796a36e85_cgraph.md5  aa_8h_ab8fb4020e5ce73359f5cdebdab5e7eaf_cgraph.md5  aa_8h_afd3b9a961e51a417a1335371880ba2c7_cgraph.eps  annotated.tex  ascq__me_8cpp.tex  ascq__me_8cpp__incl.eps  ascq__me_8cpp__incl.md5  ascq__me_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.eps  ascq__me_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  ascq__me__configuration_8cpp.tex  ascq__me__configuration_8cpp__incl.eps  (+445 more)
Etude_cas/ascq_me/src/: CMakeLists.txt  Makefile  ascq_me  ascq_me_configuration.cpp  cmake_install.cmake  digest.cpp  error.cpp  formula.cpp  isodistrib.cpp  seqio.cpp
Etude_cas/ascq_me/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
(+148 files in other folders)
